// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-preview/PreviewLoading render() should render correctly 1`] = `
<div
  className="bcpr-PreviewLoading"
>
  <FileDefault32
    height={160}
    width={160}
  />
  <div
    className="bcpr-PreviewLoading-message"
  >
    <FormattedMessage
      defaultMessage="We’re sorry, the preview didn’t load. Please refresh the page."
      id="be.previewError"
    />
  </div>
</div>
`;

exports[`elements/content-preview/PreviewLoading render() should render correctly when blocked by access policy 1`] = `
<div
  className="bcpr-PreviewLoading"
>
  <SecurityBlockedState />
  <div
    className="bcpr-PreviewLoading-message"
  >
    <FormattedMessage
      defaultMessage="Your access is restricted due to the classification applied to this content."
      id="be.previewErrorBlockedByPolicy"
    />
  </div>
</div>
`;
